--- a/gradle.properties
+++ b/gradle.properties
@@ -4,3 +4,6 @@ quarkusPluginVersion=2.5.4.Final
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=2.5.4.Final
+
+lombokVersion=1.18.22
+playFabVersion=0.122.201027
